<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/banner_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_desc"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:src="@drawable/makedu_consult_website_banner" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/banner_image">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/company_name"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:drawableLeft="@drawable/ic_location_on_black_20dp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_location_on_black_20dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-light"
                android:maxLines="1"
                android:text="@string/company_address"
                android:textSize="16sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autoLink="all"
                android:drawableLeft="@drawable/ic_phone_android_black_20dp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_phone_android_black_20dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/company_phone"
                android:textColorLink="@color/colorAccent"
                android:textSize="16sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autoLink="all"
                android:drawableLeft="@drawable/ic_mail_black_20dp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_mail_black_20dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/company_email"
                android:textColorLink="@color/colorAccent"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:autoLink="all"
                android:drawableLeft="@drawable/ic_web_black_20dp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_web_black_20dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/company_website"
                android:textColorLink="@color/colorAccent"
                android:textSize="16sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/description"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-light"
                android:lineSpacingExtra="4dp"
                android:text="@string/company_desc"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/working_hours_desc"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:id="@+id/monday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/monday"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/monday_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/company_time"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:id="@+id/tuesday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/tuesday"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tuesday_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/company_time"
                    android:textSize="16sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:id="@+id/wednesday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/wednesday"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/wednesday_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/company_time"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:id="@+id/thursday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/thursday"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/thursday_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/company_time"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:id="@+id/friday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/friday"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/friday_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/company_time"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:id="@+id/saturday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/saturday"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/saturday_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/closed"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:id="@+id/sunday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/sunday"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/sunday_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/closed"
                    android:textSize="16sp" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</RelativeLayout>